symbolic_actions_iconsdir = join_paths(symbolic_iconsdir, 'actions')

regular_files = [
    'view-app-grid-symbolic.svg',
    'view-app-grid-Main-symbolic.svg',
    'view-app-grid-sessionMode-symbolic.svg',
    'view-app-grid-currentMode-symbolic.svg',
]

install_data(regular_files, install_dir: symbolic_actions_iconsdir)
